GP: fix measurement results table overflow on mobile devices

--- a/src/assets/less/components/gp-results-table-output.less
+++ b/src/assets/less/components/gp-results-table-output.less
@@ -349,11 +349,14 @@
 							display: flex;
 							align-items: center;
 							column-gap: 8px;
-							width: 652px;
 							font-size: 14px;
 							font-weight: 400;
 							line-height: 20px;
 							color: #17233a;
+
+							@media (min-width: @screen-lg-min) {
+								width: 652px;
+							}
 						}
 
 						&.targets {
